# hermes-otel

./: .env.example  .gitignore  ARTICLE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  HONEYCOMB.md  LICENSE  README.md  __init__.py  backends.py  config.yaml.bak.pre-metrics  config.yaml.example  debug_utils.py  helpers.py  hermes_otel.py  hooks.py  identity.py  index.html  langsmith_backend.py  live_store.py  log_handler.py  plugin.yaml  plugin_config.py  pyproject.toml  release-please-config.json  session_state.py  span_tracker.py  tracer.py
.github/workflows/: deploy-site.yml  release-please.yml  test.yml
dashboard/: build.mjs  manifest.json  package-lock.json  package.json  plugin_api.py  tsconfig.json
dashboard/backends/: __init__.py  base.py  jaeger.py  langfuse.py  openobserve.py  phoenix.py  signoz.py  tempo.py  uptrace.py
dashboard/src/: atoms.tsx  icons.tsx  index.tsx  lib.ts  live.tsx  logs.tsx  metrics.tsx  sdk.ts  spantree.tsx  traces.tsx  ui.tsx
docker-compose/: all.sh  jaeger.yaml  langfuse.yaml  lgtm.yaml  openobserve.yaml  phoenix.yaml  uptrace.yaml
docker-compose/lgtm/: README.md  otelcol-config.yaml
docker-compose/openobserve/: README.md
docker-compose/signoz/: README.md  docker-compose.yaml
docker-compose/uptrace/: README.md  uptrace.yml
docs/: PLAN_multi_backend_dashboard.md  PRD_concurrency_and_export.md  PRD_config_and_telemetry_enrichment.md  PRD_metrics.md  REFACTOR_PLAN.md  otel_plan.md  overview.md  summary.md
scripts/: verify_multi_backend.py
skills/observability/: SKILL.md
tests/: conftest.py
tests/e2e/: conftest.py  test_langfuse_traces.py  test_phoenix_traces.py
tests/integration/: test_api_errors.py  test_approval_spans.py  test_batch_processor.py  test_inmemory_pipeline.py  test_langsmith_integration.py  test_live_store_pipeline.py  test_metrics_pipeline.py  test_multi_backend.py  test_orphan_sweep.py  (+6 more)
video/: DESIGN.md  SCRIPT.md  STORYBOARD.md  index.html  meta.json  narration.txt
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+68 files in other folders)
