[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-otel"
version = "1.0.0"
description = "OpenTelemetry plugin for Hermes Agent — auto-export LLM traces to Phoenix, Langfuse, LangSmith, etc."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.optional-dependencies]
langsmith = [
    "langsmith",
]
dev = [
    "pytest>=8.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
e2e = [
    "requests",
    "openai",
]

[project.entry-points."hermes.plugin"]
hermes_otel = "hermes_otel:register"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests using InMemorySpanExporter",
    "e2e: end-to-end tests requiring Docker services",
    "phoenix: requires Phoenix container",
    "langfuse: requires Langfuse containers",
    "smoke: full-stack tests requiring hermes-agent + observability backend running",
]
addopts = "-m 'not e2e and not smoke' -v"

[tool.setuptools]
packages = ["hermes_otel"]

[tool.setuptools.package-dir]
hermes_otel = "."
